manifests/hotrod.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hotrod-frontend
  namespace: hotrod
  labels:
    appName: hotrod-frontend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  ports:
  - name: http-hotrod-frontend
    port: 8080
  type: LoadBalancer
  selector:
    appName: hotrod-frontend
---
apiVersion: apps/v1beta2 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: hotrod-frontend
  namespace: hotrod
spec:
  selector:
    matchLabels:
      appName: hotrod-frontend
  replicas: 3
  template:
    metadata:
      labels:
        appName: hotrod-frontend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
      - name: hotrod-frontend
        image: index.docker.io/willwangkelda/hotrod-frontend
        command: ["/go/bin/hotrod", "frontend"]
        ports:
        - containerPort: 8080
