manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotrod-frontend
  namespace: hotrod
  labels:
    appName: hotrod-frontend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  ports:
  - name: http-hotrod-frontend
    port: 8080
  type: LoadBalancer
  selector:
    appName: hotrod-frontend
