manifests/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hotrod-ingress
  namespace: hotrod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hotrod-nginx
          servicePort: 80
      - path: /api
        backend:
          serviceName: hotrod-api
          servicePort: 80
      - path: /map
        backend:
          serviceName: hotrod-mapper
          servicePort: 80
